# csv_reader_profiling

./: README.md  csv_to_postgres_profiling.py  csv_to_sqlite_profiling.py  main.py  pyproject.toml  test.py
