[project]
name = "csv-reader-profiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "maturin>=1.8.3",
    "memory-profiler>=0.61.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
]
